<resources>
    <string name="app_name">AppGarcom</string>
    <string name="title_activity_principal">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="CODIGO">codigo</string>
    <string name="EMAIL">email</string>
    <string name="SENHA">senha</string>
    <string name="FANTAZIA">fantazia</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_vendas">Vendas</string>
    <string name="menu_pedidos">Pedidos</string>
    <string name="menu_produtos">Produto</string>
    <string name="menu_cancelar">Cancelar</string>
    <string name="menu_cardapio">Cardápio</string>
    <string name="menu_promocao">Promoções do Dia</string>
    <string name="fragment_relatar_add_foto_text">Adicionar Foto</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_teste">TesteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
